--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,6 @@ body {
     position: fixed;
     color: #fff;
     font-size: 40px;
-    text-transform: uppercase;
     top: 30%;
     text-align: center;
     width: 100%;
@@ -351,4 +350,25 @@ body {
 #text a {
     text-decoration: none;
     color: #fff;
+    text-transform: uppercase;
+    font-family: "Source Serif 4", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+}
+
+#st {
+    position: fixed;
+    color: #fff;
+    font-size: 15px;
+    text-align: center;
+    width: 80vw;
+    max-width: 650px;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: "Source Serif 4", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
