--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
 }
 
 .sky {
-    background: -webkit-linear-gradient(top, rgb(0, 0, 0) 50%, rgb(25, 19, 39)80%, rgb(43, 32, 72));
+    background: -webkit-linear-gradient(top, #1f345c 50%, #6481b5 80%, #d7d6d2);
     width: 100%;
     height: 100%;
     position: absolute;
@@ -160,24 +160,6 @@ body {
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-duration: 10s;
-}
-
-.car {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-}
-
-.car img {
-    position: fixed;
-    bottom: 0;
-    max-width: 500px;
-    width: 80vw;
-    right: 0;
-    left: 0;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 @keyframes escurecer {
@@ -342,7 +324,7 @@ body {
     position: fixed;
     color: #fff;
     font-size: 40px;
-    top: 30%;
+    top: 20%;
     text-align: center;
     width: 100%;
 }
@@ -371,4 +353,22 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+}
+
+.car {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.car img {
+    position: fixed;
+    bottom: 0;
+    max-width: 800px;
+    width: 80vw;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
 }
