--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,7 @@ body {
     animation-name: estrela;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+    clip-path: polygon(50% 0, 79% 90%, 2% 35%, 98% 35%, 21% 90%);
 }
 
 .estrela.style1 {
