--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,7 @@
 html,
 body {
     margin: 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
+    
 }
 
 .title {
@@ -32,7 +29,7 @@ body {
 }
 
 .sky {
-    background: -webkit-linear-gradient(top, #1f345c 50%, #6481b5 80%, #d7d6d2);
+    background: -webkit-linear-gradient(top, #0b1f47 50%, #6d7c98 80%, #fff6e3);
     width: 100%;
     height: 100%;
     position: absolute;
